--- a/packages/ui/src/components/Input/textArea/textArea.less
+++ b/packages/ui/src/components/Input/textArea/textArea.less
@@ -4,39 +4,38 @@
 .condo-input {
   &.condo-input-textarea {
     height: auto;
-    padding: @condo-global-spacing-12;
-  }
-
-  &.condo-input-show-bottom-panel {
-    padding-bottom: @condo-global-spacing-60;
+    padding: 12px;
+    border: none !important;
   }
 }
 
 .condo-input-textarea-wrapper {
   position: relative;
+  height: fit-content !important;
+  padding: 0 !important;
 }
 
 .condo-input-utils {
   display: flex;
-  gap: @condo-global-spacing-16;
+  gap: @condo-global-spacing-8;
   align-items: center;
   max-height: @condo-global-spacing-20;
 }
 
 .condo-input-count {
   color: @condo-global-color-gray-7;
+  font-size: @condo-global-font-size-text-s;
   font-family: "Noto Sans Mono", monospace;
 }
 
 .condo-input-bottom-panel {
-  position: absolute;
-  bottom: @condo-global-border-width-default * 2;
+  position: relative;
   left: @condo-global-spacing-12;
   display: flex;
   flex-direction: row;
   align-items: center;
   width: calc(100% - @condo-global-spacing-12 * 2);
-  max-height: @condo-global-spacing-52 - @condo-global-border-width-default;
+  max-height: 44px;
   padding: @condo-global-spacing-8 0 @condo-global-spacing-12;
   background-color: @condo-global-color-white;
 
@@ -46,4 +45,8 @@
     align-items: center;
     margin-left: auto;
   }
+}
+
+.arrow-icon {
+  transform: rotate(-90deg);
 }
