fix(ui): DOMA-11785 fix focus

--- a/packages/ui/src/components/Button/style.less
+++ b/packages/ui/src/components/Button/style.less
@@ -518,8 +518,6 @@
     .condo-btn-static-text-color(@condo-global-color-green-5);
     .condo-btn-content-color(@condo-global-color-green-5);
 
-    border: transparent;
-
     & > .condo-btn-text {
       background: transparent;
     }
@@ -536,6 +534,7 @@
     &:focus,
     &-focus {
       background: transparent;
+      border-color: transparent;
     }
 
     &:hover {
