fix(ui): DOMA-11785 fix border

--- a/packages/ui/src/components/Button/style.less
+++ b/packages/ui/src/components/Button/style.less
@@ -162,6 +162,7 @@
   &-minimal.condo-btn-compact.condo-btn-secondary,
   &-minimal.condo-btn-compact.condo-btn-accent {
     padding: 0;
+    border: none;
   }
 
   // After layer is used to show gradient outline on tab-focusing
