fix(ui): DOMA-11785 fix border

--- a/packages/ui/src/components/Button/style.less
+++ b/packages/ui/src/components/Button/style.less
@@ -161,7 +161,10 @@
 
   &-minimal.condo-btn-compact.condo-btn-primary,
   &-minimal.condo-btn-compact.condo-btn-secondary,
-  &-minimal.condo-btn-compact.condo-btn-accent {
+  &-minimal.condo-btn-compact.condo-btn-accent,
+  &-minimal.condo-btn-compact.condo-btn-primary.condo-btn-dangerous,
+  &-minimal.condo-btn-compact.condo-btn-secondary.condo-btn-dangerous,
+  &-minimal.condo-btn-compact.condo-btn-accent.condo-btn-dangerous {
     padding: 0;
     border: none;
   }
