fix(ui): DOMA-11785 fix disable hover

--- a/packages/ui/src/components/Button/style.less
+++ b/packages/ui/src/components/Button/style.less
@@ -470,6 +470,8 @@
 
       &.condo-btn-minimal {
         .minimal-styles;
+
+        border: none;
       }
     }
 
@@ -694,6 +696,8 @@
 
       &.condo-btn-minimal {
         .minimal-styles;
+
+        border: none;
       }
     }
 
@@ -735,6 +739,8 @@
 
       &.condo-btn-minimal {
         .minimal-styles;
+
+        border: none;
       }
     }
 
