fix(ui): DOMA-11785 fix border

--- a/packages/ui/src/components/Button/style.less
+++ b/packages/ui/src/components/Button/style.less
@@ -419,6 +419,10 @@
 
       border: @condo-button-border-width solid @condo-global-color-red-5;
 
+      .condo-btn-minimal {
+        border: none;
+      }
+
       &:hover {
         background: @condo-global-color-red-1;
         .condo-btn-content-color(@condo-global-color-red-7);
@@ -478,8 +482,6 @@
 
       &.condo-btn-minimal {
         .minimal-styles;
-
-        border: none;
       }
     }
 
@@ -638,6 +640,10 @@
 
       border: @condo-button-border-width solid @condo-global-color-red-5;
 
+      &.condo-btn-minimal {
+        border: none;
+      }
+
       &:hover {
         background: @condo-global-color-red-1;
         .condo-btn-content-color(@condo-global-color-red-7);
@@ -697,8 +703,6 @@
 
       &.condo-btn-minimal {
         .minimal-styles;
-
-        border: none;
       }
     }
 
@@ -740,8 +744,6 @@
 
       &.condo-btn-minimal {
         .minimal-styles;
-
-        border: none;
       }
     }
 
