--- a/packages/ui/src/components/Button/style.less
+++ b/packages/ui/src/components/Button/style.less
@@ -291,7 +291,7 @@
           .condo-btn-static-text-color(@condo-global-color-red-5);
         }
 
-        &.condo-btn-stateless {
+        &.condo-btn-stateless:not(:disabled) {
           &:focus,
           &-focus,
           &:hover,
@@ -482,6 +482,8 @@
 
       &.condo-btn-minimal {
         .minimal-styles;
+
+        border: none;
       }
     }
 
@@ -537,6 +539,8 @@
 
       &.condo-btn-minimal {
         .minimal-styles;
+
+        border: none;
       }
     }
 
@@ -703,6 +707,8 @@
 
       &.condo-btn-minimal {
         .minimal-styles;
+
+        border: none;
       }
     }
 
@@ -744,6 +750,8 @@
 
       &.condo-btn-minimal {
         .minimal-styles;
+
+        border: none;
       }
     }
 
