fix(ui): DOMA-11785 fix condo-btn-stateless

--- a/packages/ui/src/components/Button/style.less
+++ b/packages/ui/src/components/Button/style.less
@@ -291,7 +291,7 @@
           .condo-btn-static-text-color(@condo-global-color-red-5);
         }
 
-        &.condo-btn-stateless:not(:disabled) {
+        &:not(:disabled).condo-btn-stateless {
           &:focus,
           &-focus,
           &:hover,
