fix(ui): fix disable

--- a/packages/ui/src/components/Button/style.less
+++ b/packages/ui/src/components/Button/style.less
@@ -483,11 +483,12 @@
       &.condo-btn-minimal {
         .minimal-styles;
 
-        border: none;
+        .condo-btn-content-color(@condo-global-color-black);
+        .condo-btn-static-text-color(@condo-global-color-black);
       }
     }
 
-    &.condo-btn-minimal:not(.condo-btn-dangerous) {
+    &.condo-btn-minimal:not(.condo-btn-dangerous, :disabled) {
       .condo-btn-static-text-color(@condo-global-color-gray-7);
       .condo-btn-content-color(@condo-global-color-gray-7);
     }
@@ -546,7 +547,8 @@
       &.condo-btn-minimal {
         .minimal-styles;
 
-        border: none;
+        .condo-btn-content-color(@condo-global-color-black);
+        .condo-btn-static-text-color(@condo-global-color-black);
       }
     }
 
@@ -650,10 +652,6 @@
 
       border: @condo-button-border-width solid @condo-global-color-red-5;
 
-      &.condo-btn-minimal {
-        border: none;
-      }
-
       &:hover {
         background: @condo-global-color-red-1;
         .condo-btn-content-color(@condo-global-color-red-7);
@@ -713,8 +711,6 @@
 
       &.condo-btn-minimal {
         .minimal-styles;
-
-        border: none;
       }
     }
 
@@ -756,8 +752,6 @@
 
       &.condo-btn-minimal {
         .minimal-styles;
-
-        border: none;
       }
     }
 
