--- a/packages/ui/src/components/Button/style.less
+++ b/packages/ui/src/components/Button/style.less
@@ -183,6 +183,10 @@
   &-minimal.condo-btn-compact.condo-btn-accent.condo-btn-dangerous {
     padding: 0;
     border: none;
+
+    &:disabled {
+      border: none;
+    }
   }
 
   // After layer is used to show gradient outline on tab-focusing
