feat(ui): DOMA-11759 fix styles

--- a/packages/ui/src/components/Input/textArea/textArea.less
+++ b/packages/ui/src/components/Input/textArea/textArea.less
@@ -4,7 +4,7 @@
 .condo-input {
   &.condo-input-textarea {
     height: auto;
-    padding: 12px;
+    padding: @condo-global-spacing-12;
     border: none !important;
   }
 }
@@ -35,7 +35,7 @@
   flex-direction: row;
   align-items: center;
   width: calc(100% - @condo-global-spacing-12 * 2);
-  max-height: 44px;
+  max-height: @condo-global-spacing-12 + @condo-global-spacing-32;
   padding: @condo-global-spacing-8 0 @condo-global-spacing-12;
   background-color: @condo-global-color-white;
 
