--- a/apps/condo/domains/common/components/containers/global-styles.css
+++ b/apps/condo/domains/common/components/containers/global-styles.css
@@ -412,3 +412,196 @@
 .map-unit-button.map-commercial-unit-button:hover {
   background-color: #eb34684d;
 }
+
+/* TODO (profitrolka) move to aiNotification.module.css */
+.ai-notification {
+  width: 100%;
+  background-color: white;
+}
+
+.ai-notification > .condo-space-item {
+  width: 100%;
+}
+
+.ai-notification-wrapper {
+  display: inline-block;
+  width: 100%;
+  height: fit-content;
+}
+
+.ai-notification-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.ai-notification-status {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+
+.ai-notification-actions {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+/* TODO (profitrolka) move to comments.module.css */
+
+.comment-container {
+  display: flex;
+  flex-flow: column nowrap;
+  align-content: space-between;
+  overflow: hidden;
+}
+
+.comment-container.in-page {
+  max-height: 756px;
+  border: 1px solid var(--condo-global-color-gray-3);
+  border-radius: 8px;
+}
+
+.comment-container.in-modal > div,
+.comment-container.in-modal > span,
+.comment-container.in-modal > .card-container > div {
+  padding: 0;
+}
+
+.comment-body {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  gap: 24px;
+  height: 100%;
+  padding: 12px 24px 24px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.comment-container.in-modal > div > .comment-body {
+  padding: 24px 0;
+}
+
+.drawer-wrapper.ant-drawer-right > .ant-drawer-content-wrapper {
+  top: 20px;
+  right: 20px;
+  height: calc(100% - 40px);
+}
+
+.ant-drawer-content {
+  border-radius: 8px;
+}
+
+.ant-drawer-header > .ant-drawer-header-title {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.ant-drawer-wrapper-body > .ant-drawer-header {
+  padding-bottom: 0;
+  border: none;
+}
+
+.ant-drawer-header-title > .ant-drawer-close {
+  margin: 0;
+}
+
+.comment-body > .ant-comment,
+.comment-body > .ant-comment > .ant-comment-inner {
+  padding: 0;
+}
+
+.ant-drawer-header > .ant-drawer-header-title > .ant-drawer-title {
+  font-weight: bold;
+  font-size: var(--condo-global-font-size-h3);
+}
+
+.comment-container:not(.is-small) {
+  height: calc(100vh - 100px);
+}
+
+.comment-container.in-modal {
+  height: 100%;
+}
+
+.comment-head {
+  padding: 24px 24px 0;
+  font-weight: bold;
+  font-size: 20px;
+  font-style: normal;
+  line-height: 28px;
+}
+
+.comment-footer {
+  padding: 24px;
+}
+
+.empty-container {
+  display: flex;
+  flex: 1 1;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  padding: 24px;
+  text-align: center;
+}
+
+.empty-container .ant-empty-image {
+  display: none;
+}
+
+.comments-tabs-container {
+  display: flex;
+  flex: 1 1 auto;
+  height: calc(100vh - 508px);
+  padding: 0;
+  overflow-y: scroll;
+}
+
+.empty-container-text {
+  font-size: var(--condo-global-font-size-h4);
+}
+
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 8px 0 18px;
+}
+
+.new-comment-indicator {
+  position: relative;
+  top: -3px;
+  left: 2px;
+  display: inline-block;
+  width: 4px;
+  height: 4px;
+  background-color: var(--condo-global-color-red-5);
+  border-radius: 100px;
+}
+
+.switch-comments-type-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 24px;
+}
+
+.comment-text-area-wrapper {
+  padding-bottom: 0;
+  transition: all var(--condo-global-transition-duration-default) ease-in-out;
+}
+
+.comment-text-area-wrapper.with-file {
+  padding-bottom: 44px;
+}
+
+.ant-upload-list.ant-upload-list-text {
+  position: absolute;
+  top: 52px;
+  left: -12px;
+  margin-bottom: 10px;
+  overflow-y: scroll;
+}
